# anvil

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  anvil-config.example.yml  build.gradle.kts  settings.gradle.kts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: anvil-cli.yml  anvil-server.yml  rust-clippy.yml
anvil-cli/: Cargo.toml
anvil-cli/src/: main.rs
anvil-server/: Cargo.toml  anvil-config.example.yml  anvil-projects.example.yml  build.rs
anvil-server/migrations/2022-11-26-220944_create_audit_log/: up.sql
anvil-server/src/: config.rs  db.rs  log.rs  main.rs  notify.rs  utils.rs
anvil-server/src/api/: channels.rs  mod.rs  ping.rs
anvil-server/src/config/: main.rs  mod.rs  projects.rs
src/main/scala/net/liquid/: main.scala
