[package]
name = "anvil-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
vergen = "7.4.2"
anyhow = "1.0.66"

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls", "macros", "compress-brotli", "compress-gzip", "compress-zstd"] }
paris = { version = "1.5.13", features = ["macros", "timestamps"] }
tokio = { version = "1.21.1", features = ["full"] }
enable-ansi-support = "0.1.2"
serde_yaml = "0.9.14"