[package]
name = "anvil-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
vergen = "8.1.1"
anyhow = "1.0.66"

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls", "macros", "compress-brotli", "compress-gzip", "compress-zstd"] }
actix-cors = "0.6.4"
paris = { version = "1.5.13", features = ["timestamps", "no_logger"] }
tokio = { version = "1.21.1", features = ["full"] }
enable-ansi-support = "0.2.1"
serde_yaml = "0.9.14"
serde_json = "1.0.87"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = "0.11.12"
diesel = { version = "2.0.0", features = ["postgres"] }
diesel_migrations = "2.0.0"
chrono = "0.4.23"
